--- a/frontend/src/styles/ResultCard.css
+++ b/frontend/src/styles/ResultCard.css
@@ -1,8 +1,20 @@
 .result-box {
-    margin-top: 1rem; 
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     width: 75vw;
-    border: 1px solid black; 
+    border: 1px solid white; 
     padding: 1rem;
+}
+
+.result-title {
+    text-align: center;
+    
+    font-size: 5rem;
+}
+
+ul {
+    list-style: none;
+}
+
+.result-aqi {
+    font-weight: bold;
 }
