--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  color: white
+  color: white;
+  overflow-x: hidden;
 }
 
 code {
