--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -1,8 +1,12 @@
 input {
-    margin-left: 5em;
-    margin-top: 1em; 
+    margin-top: 3.5em; 
     margin-bottom: 1em;
     width: 25%;
     height: 35px;
+}
+
+form {
+    display: flex; 
+    justify-content: center;
 }
 
