--- a/frontend/src/components/RedirectionButton.css
+++ b/frontend/src/components/RedirectionButton.css
@@ -1,17 +1,18 @@
-
 .button {
   align-items: center;
   background-color: initial;
   background-image: linear-gradient(#464d55, #25292e);
   border-radius: 8px;
   border-width: 0;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.05);
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-flex;
   flex-direction: column;
-  font-family: expo-brand-demi,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-family: expo-brand-demi, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 18px;
   height: 52px;
   justify-content: center;
@@ -32,8 +33,8 @@
 }
 
 .button:hover {
-  box-shadow: rgba(0, 1, 0, .2) 0 2px 8px;
-  opacity: .85;
+  box-shadow: rgba(0, 1, 0, 0.2) 0 2px 8px;
+  opacity: 0.85;
 }
 
 .button:active {
@@ -41,7 +42,7 @@
 }
 
 .button:focus {
-  box-shadow: rgba(0, 0, 0, .5) 0 0 0 3px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 3px;
 }
 
 .button-link {
@@ -53,4 +54,3 @@
     height: 48px;
   }
 }
-
