--- a/frontend/src/styles/Slider.css
+++ b/frontend/src/styles/Slider.css
@@ -45,3 +45,93 @@
   width: 70%;
   margin: 0 auto;
 }
+
+@media (min-width: 992px) {
+  .left-arrow {
+    
+    top: 50%;
+    left: 72px;
+    font-size: 3rem;
+    color: white;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+  .right-arrow {
+   
+    top: 50%;
+    right: 72px;
+    font-size: 3rem;
+    color: white;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+  }
+  @media (min-width: 768px) {
+    .left-arrow {
+     
+      top: 50%;
+      left: 40px;
+      font-size: 3rem;
+      color: white;
+      z-index: 10;
+      cursor: pointer;
+      user-select: none;
+    }
+    .right-arrow {
+     
+      top: 50%;
+      right: 30px;
+      font-size: 3rem;
+      color: white;
+      z-index: 10;
+      cursor: pointer;
+      user-select: none;
+    }
+    }
+    @media (min-width: 576px) {
+      .left-arrow {
+        
+        top: 50%;
+        left: 10px;
+        font-size: 3rem;
+        color: white;
+        z-index: 10;
+        cursor: pointer;
+        user-select: none;
+      }
+      .right-arrow {
+       
+        top: 50%;
+        right: 10px;
+        font-size: 3rem;
+        color: white;
+        z-index: 10;
+        cursor: pointer;
+        user-select: none;
+      }
+      }
+      @media (max-width: 576px) {
+        .left-arrow {
+         
+          top: 50%;
+          left: 10px;
+          font-size: 3rem;
+          color: white;
+          z-index: 10;
+          cursor: pointer;
+          user-select: none;
+        }
+        .right-arrow {
+         
+          top: 50%;
+          right: 10px;
+          font-size: 3rem;
+          color: white;
+          z-index: 10;
+          cursor: pointer;
+          user-select: none;
+        }
+        }
+     
