--- a/frontend/src/styles/Slider.css
+++ b/frontend/src/styles/Slider.css
@@ -12,7 +12,7 @@
   top: 50%;
   right: 72px;
   font-size: 3rem;
-  color: white;
+  color: black;
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -23,7 +23,7 @@
   top: 50%;
   left: 72px;
   font-size: 3rem;
-  color: white;
+  color: black;
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -44,4 +44,97 @@
 .quote-text {
   width: 70%;
   margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+  .right-arrow {
+    position: absolute;
+    top: 50%;
+    right: 50px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .left-arrow {
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+@media (min-width: 768px) {
+  .right-arrow {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .left-arrow {
+    position: absolute;
+    top: 50%;
+    left: 30px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+@media (min-width: 576px) {
+  .right-arrow {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .left-arrow {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+@media (max-width: 576px) {
+  .right-arrow {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .left-arrow {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    font-size: 3rem;
+    color: black;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
 }
