--- a/frontend/src/components/RedirectionButton.css
+++ b/frontend/src/components/RedirectionButton.css
@@ -7,7 +7,7 @@
   border-width: 0;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.05);
   box-sizing: border-box;
-  color: #fff;
+  color: black;
   cursor: pointer;
   display: inline-flex;
   flex-direction: column;
