--- a/frontend/src/styles/ResultCard.css
+++ b/frontend/src/styles/ResultCard.css
@@ -3,13 +3,15 @@
   width: 90vw;
   height: auto;
   padding: 1rem;
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 7px 29px 0px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 7px 29px 0px;
 }
 
 .result-title {
   text-align: center;
   font-size: clamp(1.2rem, 5.5vw, 5rem);
   margin-bottom: 1rem;
+  color: #547D71
 }
 
 li {
@@ -36,7 +38,7 @@ li {
 .result-first,
 .result-second {
   width: 95%;
-  border: 1px solid white;
+  background-color: #F5F8F3;
   padding: 1rem;
 }
 
