--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -1,10 +1,3 @@
-* {
-  border: 0;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
 :root {
   font-size: calc(16px + (24 - 16) * (100vw - 320px) / (1920 - 320));
 }
@@ -74,7 +67,7 @@ input {
 .search-bar input:valid {
   background: #fff;
   border-radius: 0.375em 0 0 0.375em;
-  box-shadow: 0 0 0 0.1em #d9d9d9 inset;
+  box-shadow: 0 0 0 0.1em #e8bfa2 inset;
   transform: scale(1);
 }
 .search-btn {
@@ -101,7 +94,7 @@ input {
   height: 1.2em;
 }
 .search-btn:after {
-  background: #f1f1f1;
+  background: #ede5e5;
   border-radius: 0 0.25em 0.25em 0;
   top: 51%;
   left: 51%;
@@ -120,7 +113,7 @@ input {
 /* Active state */
 .search-bar input:focus + .search-btn,
 .search-bar input:valid + .search-btn {
-  background: #2762f3;
+  background: #547D71;
   border-radius: 0 0.375em 0.375em 0;
   transform: scale(1);
 }
@@ -133,7 +126,7 @@ input {
 .search-bar input:focus + .search-btn:hover,
 .search-bar input:valid + .search-btn:hover,
 .search-bar input:valid:not(:focus) + .search-btn:focus {
-  background: #0c48db;
+  background: #547D71;
 }
 .search-bar input:focus + .search-btn:active,
 .search-bar input:valid + .search-btn:active {
@@ -143,13 +136,10 @@ input {
 @media screen and (prefers-color-scheme: dark) {
   body,
   input {
-    color: #f1f1f1;
-  }
-  body {
-    background: #171717;
+    color: #F5F8F3;
   }
   .search-bar input {
-    box-shadow: 0 0 0 0.4em #f1f1f1 inset;
+    box-shadow: 0 0 0 0.4em #547D71 inset;
   }
   .search-bar input:focus,
   .search-bar input:valid {
@@ -157,18 +147,6 @@ input {
     box-shadow: 0 0 0 0.1em #3d3d3d inset;
   }
   .search-btn {
-    background: #f1f1f1;
+    background: #547D71;
   }
 }
-
-/* input {
-    margin-top: 3.5em; 
-    margin-bottom: 1em;
-    width: 25%;
-    height: 35px;
-}
-
-form {
-    display: flex; 
-    justify-content: center;
-} */
