--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,8 @@
-/* body {
+ body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
   color: white;
   overflow-x: hidden;
 }
@@ -12,15 +11,20 @@ h1,
 h2,
 h3 {
   margin-bottom: 1rem;
-  color: var(--dark);
   text-align: center;
+  font-weight: bolder;
+  color: limegreen;
 }
 
 p {
   margin-bottom: 3rem;
   color: var(--dark);
 }
-
+main {
+  background: white;
+  align-content: center;
+  
+}
 button {
   font-size: calc(10px + 2vmin);
-} */
+}
