--- a/frontend/src/components/RedirectionButton.css
+++ b/frontend/src/components/RedirectionButton.css
@@ -1,19 +1,18 @@
-.button {
+.redirection {
   display: flex;
+  justify-content: center;
+  padding: 5rem;
+}
+.button-redirection {
   align-items: center;
-  background-color: initial;
-  background-image: linear-gradient(#464d55, #25292e);
+  color: #ffffff;
+  background-color: #2ecc71;
   border-radius: 8px;
   border-width: 0;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.05);
   box-sizing: border-box;
-  color: black;
+  color: #fff;
   cursor: pointer;
-  display: inline-flex;
-  flex-direction: column;
-  font-family: expo-brand-demi, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 18px;
   height: 52px;
   justify-content: center;
@@ -26,12 +25,11 @@
   text-decoration: none;
   transform: translate3d(0, 0, 0);
   transition: all 150ms;
-  vertical-align: baseline;
-  white-space: nowrap;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button:hover {
@@ -51,8 +49,13 @@
   text-decoration: none;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 768px) {
   .button {
     height: 48px;
+    font-size: 1rem;
+  }
+  .redirection {
+    display: flex;
+    justify-content: center;
   }
 }
