--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,12 +1,31 @@
-* {
-  border: 0;
-  box-sizing: border-box;
+body {
   margin: 0;
-  padding: 0;
+  font-family: "Poppins", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: black;
   overflow-x: hidden;
 }
 
-body {
-  background: #F5F8F3;
-  color: black;
+h1,
+h2,
+h3 {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-weight: bolder;
+  color: limegreen;
+}
+
+p {
+  margin-bottom: 3rem;
+  color: var(--dark);
+}
+main {
+  background: white;
+  align-content: center;
+  
+}
+
+:root {
+  font-size: calc(16px + (24 - 16) * (100vw - 320px) / (1920 - 320));
 }
